integration/snapshots/report-invalid-quote_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet report
EXIT: Some(1)
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 1 sources 
     Parsing annotations
      Parsed 1 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references

  × 
  │   × could not find text in section "section" of my-spec.md
  │    ╭─[src/my-code.rs:2:5]
  │  1 │ //= my-spec.md#section
  │  2 │ //# Here is missing text
  │    ·     ──────────┬─────────
  │    ·               ╰── text here
  │    ╰────
  │ 
  │ 
  ╰─▶ encountered 1 errors
