integration/snapshots/report-snapshot-missing_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet report --ci
EXIT: Some(1)
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 1 sources 
     Parsing annotations
      Parsed 1 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 1 references 
     Sorting references
      Sorted 1 references 
     Writing .duvet/reports/report.html
       Wrote .duvet/reports/report.html 
    Checking .duvet/snapshot.txt

  × .duvet/snapshot.txt
  ╰─▶ Could not read report snapshot. This is required to enforce CI checks.
